# pygame_ecs

./: .gitignore  LICENSE  README.md  __init__.py  particle_test.py  pyproject.toml  setup.py  speed_test.py  test_particle.py
benchmarks/: instance_vs_class.py  instance_vs_class2.py
perf_test/: arr_vs_list.py  uid_vs_class_hash.py
pygame_ecs/: __init__.py  ecs.py  entity.py  exceptions.py
pygame_ecs/backends/: base.py  list.py
pygame_ecs/components/: __init__.py  base.py  base_component.py  component.py  particle.py
pygame_ecs/ecs/: __init__.py
pygame_ecs/ecs/hashmap/: __init__.py
pygame_ecs/ecs/hashmap/managers/: component.py  component_manager.py  entity.py  entity_manager.py  system.py  system_manager.py
pygame_ecs/entities/: entity.py
pygame_ecs/managers/: __init__.py  component_manager.py  entity.py  entity_manager.py  system_manager.py
pygame_ecs/systems/: __init__.py  base.py  base_system.py
test/: blood.py  draw_test.py  new.py  particle_test.py  particle_test_cpu.py  particle_test_gpu.py  speed_test.py  speed_test_old.py  tester.py  tester_old.py
