
[project]
name = "pygame_ecs"
version = "0.2.9"
authors = [
  { name="Notenlish", email="71970100+Notenlish@users.noreply.github.com" },
]
description = "Pure Python, simple to use Entity Component System(ECS) for pygame"
packages=["pygame_ecs", "pygame_ecs.components", "pygame_ecs.managers", "pygame_ecs.systems"]
readme = "README.md"
requires-python = ">=3.7"
license="MIT"
keywords = [
    "pygame",
    "ECS",
    "ecs",
    "pygame-ce",
    "entity",
    "component",
    "system",
    "entity component system",
    "pygame_ecs"
]
classifiers = [
    "Development Status :: 4 - Beta",  # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/Notenlish/pygame_ecs"
"Bug Tracker" = "https://github.com/Notenlish/pygame_ecs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

